Bug 873010 - Artifacts around small overlay scrollbars in select boxes, r=mstange Bug 873010 - Artifacts around small overlay scrollbars in select boxes, r=mstange